# CppSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: Camera.hpp  Color.hpp  FrameBuffer.hpp  Light.hpp  Material.hpp  Matrix.hpp  Mesh.hpp  PixelCoordinate.hpp  Renderer.hpp  RigidBody.hpp  Rotation.hpp  Shapes.hpp  Transform.hpp  Vector.hpp  Vertex.hpp  types.hpp
src/: Camera.cpp  Color.cpp  FrameBuffer.cpp  Light.cpp  Material.cpp  Matrix.cpp  Mesh.cpp  PixelCoordinate.cpp  Renderer.cpp  RigidBody.cpp  Rotation.cpp  Shapes.cpp  Transform.cpp  Vector.cpp  Vertex.cpp  types.cpp
